<resources>
    <string name="app_name">Android_HomeWorke_1</string>
    <string name="paste_text">Введтите текст</string>
    <string name="click_me">Жмякай</string>
    <string name="choose">Сделай свой выбор</string>
    <string name="check_me">Чекни меня</string>
    <string name="Hello">Привет друг!</string>
    <string name="text">Введите что-нибудь</string>
    <string name="textpersonename">Введите Имя</string>
    <string name="phone">Введите телефон</string>
    <string name="number">Введите цифры</string>
    <string name="pass">Введите Пароль</string>
    <string name="mail">Введите Email</string>
    <string name="back">Вернуться</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>